@@ -1,3 +1,10 @@
+2002-12-27  Joe English  <jenglish@users.sourceforge.net>
+	* unix/tkUnixWm.c (WaitForEvent): process Map and Unmap events
+	as well as Configure events during WaitFor{Configure|Map}Notify.
+	Fixes [Bug 578569] (WaitForMapNotify could process Map and Unmap
+	events out of order, making Tk think a window was unmapped when
+	it really wasn't).
+
 2002-12-18  Todd M. Helfter  <tmh@purdue.edu>
 	* doc/label.n: Fixed documentation of the -compound option to
 	the label widget.  The option was simply missing from the
